[project]
name = "homeassistant_enocean"
version = "0.0.4"
authors = [
  { name="Henning Kerstan", email="mail@henningkerstan.de" },
]
description = "A wrapper class to integrate EnOcean into Home Assistant"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE*"]
dependencies = [
  "enocean4ha==0.71.0"
]

[project.urls]
Homepage = "https://github.com/henningkerstan/homeassistant_enocean"
Issues = "https://github.com/henningkerstan/homeassistant_enocean/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "homeassistant_enocean.__version__" }
readme = { file = [ "README.md" ], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "homeassistant_enocean*" ]

[tool.setuptools.package-data]
"*" = [ "*.xml", ]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true


[tool.ruff]
target-version="py313"
required-version = ">=0.13.0"

